fixed align-items: baseline in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,6 @@ img {
 
 /* #region Footer */
 .page-footer {
-  align-items: baseline;
   background-color: #2e2f42;
   padding: 100px 0;
 }
@@ -456,7 +455,7 @@ img {
 .footer-container {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: baseline;
   gap: 120px;
   flex-wrap: wrap;
 }
